poprawki, cachowanie